# routes/AchievementRoutes.go
@@ -12,7 +12,7 @@ func AchievementRoutes(app *fiber.App) {
 	api := app.Group("/api")
 	v1 := api.Group("/v1")
 
-	users := v1.Group("/achievement", middleware.AuthRequired())
+	users := v1.Group("/achievements", middleware.AuthRequired())
 	users.Get("/", services.GetAllAchievementService)
 	users.Get("/:AchievementID", services.GetAchievementByIDService)
 	users.Post("/", services.AddAchievementService)
